# sparkle-cdm

./: COPYING  README.md  meson.build  meson_options.txt
examples/: meson.build  sample-player.c
src/: meson.build  open_cdm.h  open_cdm_adapter.h  system.cpp
src/clearkey/: common.h  meson.build  module.cpp  open_cdm_adapter.h  session.cpp  session.h  system.cpp  system.h
src/gst/: decryptor.cpp  decryptor.h  meson.build  open_cdm.h  plugin.cpp  sprklcapsmeta.cpp
src/gst/sprkl/: sprklcapsmeta.h  sprklgst.h
src/mock-module/: meson.build  mock.cpp
src/sprkl/: sprkl-cdm.h
